--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -40,7 +40,7 @@ body {
 
 
 .header {
-   background: url('/img/background_1.png');
+   background: url('../img/background_1.png');
    background-position: 50%;
    min-height: 800px;
 
@@ -195,7 +195,7 @@ body {
       &:first-child::after {
          position: absolute;
          content: "";
-         background: url('/img/content2_logo_1.png') 50% no-repeat;
+         background: url('../img/content2_logo_1.png') 50% no-repeat;
          width: 100%;
          height: 100%;
       }
@@ -293,7 +293,7 @@ body {
    &:last-child::after {
       position: absolute;
       content: "";
-      background: url('/img/content3_logo_2.png') 50% no-repeat;
+      background: url('../img/content3_logo_2.png') 50% no-repeat;
       width: 100%;
       height: 100%;
    }
@@ -508,7 +508,7 @@ body {
    height: 100%;
    opacity: 0;
    transition: all .4s ease;
-   background: url(/img/content6_logo_1.png) 50% no-repeat;
+   background: url("../img/content6_logo_1.png") 50% no-repeat;
    background-color: rgba(100, 194, 158, 0.5);
 }
 
